Refactor book routes
